feat: add update, delete e dto
