# backend/src/controllers/MaintenanceController.ts
@@ -1,10 +1,11 @@
-import { Body, Controller, Get, Path, Post, Route, Security, Tags } from "tsoa";
+import { Body, Controller, Delete, Get, Path, Post, Put, Route, Security, Tags } from "tsoa";
 import { InvalidForeignKeyError } from "../errors/InvalidForeignKeyError";
 import { InvalidDataError } from "../errors/InvalidDataError";
 import { MaintenanceService } from "../services/MaintenanceService";
 import { Maintenance } from "../models/Maintenance";
 import { MaintenanceNotFoundError } from "../errors/MaintenanceNotFoundError";
-// import { DependencyExistsError } from "../errors/DependencyExistsError";
+import { CreateUpdateMaintenanceDTO } from "../dtos/CreateUpdateMaintenance.dto";
+
 
 @Route("maintenance")
 @Tags("Maintenance")
@@ -40,7 +41,8 @@ export class MaintenanceController extends Controller {
 
     @Security("jwt")
     @Post()
-    public async createEquipment(@Body() requestBody: any): Promise<Maintenance> {
+    public async createMaintenance(@Body() requestBody: CreateUpdateMaintenanceDTO): Promise<Maintenance> {
+
         try {
             return this.maintenanceService.create(requestBody);
         } catch (error) {
@@ -52,6 +54,49 @@ export class MaintenanceController extends Controller {
             if (error instanceof InvalidDataError) {
 
                 this.setStatus(InvalidDataError.httpStatusCode);
+                throw error;
+            }
+            throw error;
+        }
+    }
+
+
+    @Security("jwt")
+    @Put("{maintenanceId}")
+    public async updateMaintenance(
+        @Path() maintenanceId: string,
+        @Body() requestBody: CreateUpdateMaintenanceDTO
+    ): Promise<Maintenance> {
+        try {
+            return this.maintenanceService.update(maintenanceId, requestBody);
+        } catch (error) {
+            if (error instanceof MaintenanceNotFoundError) {
+                this.setStatus(MaintenanceNotFoundError.httpStatusCode);
+                throw error;
+            }
+            if (error instanceof InvalidForeignKeyError) {
+                this.setStatus(InvalidForeignKeyError.httpStatusCode);
+                throw error;
+            }
+            if (error instanceof InvalidDataError) {
+                this.setStatus(InvalidDataError.httpStatusCode);
+                throw error;
+            }
+            throw error;
+        }
+    }
+
+
+
+    @Security("jwt")
+    @Delete("{maintenanceId}")
+    public async deleteMaintenance(@Path() maintenanceId: string): Promise<void> {
+        try {
+            await this.maintenanceService.delete(maintenanceId);
+            this.setStatus(204);
+        } catch (error) {
+            if (error instanceof MaintenanceNotFoundError) {
+                this.setStatus(MaintenanceNotFoundError.httpStatusCode);
                 throw error;
             }
             throw error;
