# backend/src/dtos/CreateUpdateMaintenance.dto.ts
@@ -1,0 +1,9 @@
+import { MaintenanceRecurrenceEnum } from "src/models/Maintenance";
+
+export interface CreateUpdateMaintenanceDTO {
+    title: string;
+    recurrence: MaintenanceRecurrenceEnum;
+    scheduledDate?: Date;
+    description?: string;
+    partId: string;
+}
